[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Items/Clockwork Clicker.gd" type="Script" id=2]
[ext_resource path="res://Themes/MainStyleButtonPressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/MainStyleButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/MainStyleButtonNormal.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.0823529 )
border_width_left = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.101961 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id=4]
default_font = ExtResource( 1 )
/styles/MainStyle = ExtResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/hover = ExtResource( 4 )
Button/styles/normal = ExtResource( 5 )
Button/styles/pressed = ExtResource( 3 )
Label/styles/normal = SubResource( 1 )
Panel/styles/panel = SubResource( 2 )
ScrollContainer/styles/bg = SubResource( 3 )

[node name="Clockwork Clicker" type="Button"]
margin_right = 269.0
margin_bottom = 61.0
theme = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickTimer" type="Timer" parent="."]
autostart = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="." to="." method="_on_Clockwork_Clicker_pressed"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
